# ruby-for-android5

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm64-v8a-android-toolchain.cmake  arm64-v8a-android-toolchain.params  configure  make.sh
ruby-build/: .gitignore  CMakeLists.txt  Makefile  rubypie.diff  setup_ruby.sh
ruby-build/gdbm/: cmake-final.conf  cmake.conf
ruby-build/ncurses/: cmake.conf
ruby-build/openssl/: cmake.conf
ruby-build/openssl/patches/: android-ndk-r22-support.patch
ruby-build/readline/: cmake-final.conf  cmake.conf
ruby-build/ruby/: cmake-final.conf  cmake.conf
ruby-build/ruby/patches/: android-cross-ruby-3.0.0.patch
ruby-build/ruby/patches-3.1.1/: android-cross-ruby-3.1.1.patch
ruby-build/zlib/: cmake.conf
scripts/: build.sh  clean.sh  configure.sh
tools/: env.src  env.src.template
